fixed outline issue